2010-02-09  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG patterns with some scale patternTransform are not displayed correctly for small elements
        https://bugs.webkit.org/show_bug.cgi?id=25484

        SVG Pattern size was clipped to the size of the target, if the pattern is bigger than the target. This
        causes problems, if the patternTransform scales the pattern. This patch deletes the clipping.

        Tests: svg/custom/pattern-excessive-malloc.svg
               svg/custom/pattern-size-bigger-than-target-size.svg
               svg/custom/pattern-skew-transformed.svg

        * svg/SVGPatternElement.cpp:
        (WebCore::SVGPatternElement::buildPattern):

2010-02-09  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG patterns with some scale patternTransform are not displayed correctly for small elements
        https://bugs.webkit.org/show_bug.cgi?id=25484

        The old DRT results gave back a pattern size of 1x1. That was not very useful.
        The new reuslts are much more useful.

        * platform/mac/svg/W3C-SVG-1.1/coords-units-01-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/pservers-grad-03-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/pservers-grad-06-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/pservers-pattern-01-b-expected.txt:
        * platform/mac/svg/batik/paints/patternPreserveAspectRatioA-expected.txt:
        * platform/mac/svg/batik/paints/patternRegions-expected.txt:
        * platform/mac/svg/custom/deep-dynamic-updates-expected.txt:
        * platform/mac/svg/custom/js-late-pattern-and-object-creation-expected.txt:
        * platform/mac/svg/custom/js-late-pattern-creation-expected.txt:
        * platform/mac/svg/custom/js-update-pattern-child-expected.txt:
        * platform/mac/svg/custom/js-update-pattern-expected.txt:
        * platform/mac/svg/custom/pattern-cycle-detection-expected.txt:
        * platform/mac/svg/custom/pattern-deep-referencing-expected.txt:
        * platform/mac/svg/custom/pattern-excessive-malloc-expected.checksum: Added.
        * platform/mac/svg/custom/pattern-excessive-malloc-expected.png: Added.
        * platform/mac/svg/custom/pattern-excessive-malloc-expected.txt: Added.
        * platform/mac/svg/custom/pattern-in-defs-expected.txt:
        * platform/mac/svg/custom/pattern-size-bigger-than-target-size-expected.checksum: Added.
        * platform/mac/svg/custom/pattern-size-bigger-than-target-size-expected.png: Added.
        * platform/mac/svg/custom/pattern-size-bigger-than-target-size-expected.txt: Added.
        * platform/mac/svg/custom/pattern-skew-transformed-expected.checksum: Added.
        * platform/mac/svg/custom/pattern-skew-transformed-expected.png: Added.
        * platform/mac/svg/custom/pattern-skew-transformed-expected.txt: Added.
        * platform/mac/svg/custom/pattern-with-transformation-expected.txt:
        * platform/mac/svg/custom/pattern-y-offset-expected.txt:
        * platform/mac/svg/custom/scrolling-embedded-svg-file-image-repaint-problem-expected.png:
        * platform/mac/svg/custom/stroked-pattern-expected.txt:
        * platform/mac/svg/custom/transformedMaskFails-expected.png:
        * platform/mac/svg/custom/use-on-symbol-inside-pattern-expected.txt:
        * svg/custom/pattern-excessive-malloc.svg: Added.
        * svg/custom/pattern-size-bigger-than-target-size.svg: Added.
        * svg/custom/pattern-skew-transformed.svg: Added.


Canonical link: https://commits.webkit.org/45873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54560 268f45cc-cd09-0410-ab3c-d52691b4dbfc